--- a/GenTree/GenTree/Views/MainPage.xaml
+++ b/GenTree/GenTree/Views/MainPage.xaml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<xamarinforms:BottomBarPage Title="GenTree" BarBackgroundColor="LightSeaGreen" BackgroundImage="logo.jpg"
+<xamarinforms:BottomBarPage Title="GenTree" BarBackgroundColor="LightSeaGreen" BackgroundImage="logo.jpg" BackgroundColor="LightSeaGreen"
     xmlns:xamarinforms="clr-namespace:BottomBar.XamarinForms;assembly=BottomBar.XamarinForms"
     xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
@@ -7,10 +7,11 @@
             xmlns:local1="clr-namespace:GenTree.Views"
             x:Class="GenTree.MainPage">
 
-    <TabbedPage.Children xamarinforms:BottomBarPageExtensions.TabColor="#20b2aa">
+    <TabbedPage.Children xamarinforms:BottomBarPageExtensions.TabColor="LightSeaGreen">
         <local1:Tree />
         <local1:Relatives />
         <local1:Settings />
+        <local1:Tree/>
     </TabbedPage.Children>
 
 </xamarinforms:BottomBarPage>
