--- a/GenTree/GenTree/Views/Tree.xaml
+++ b/GenTree/GenTree/Views/Tree.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage Title="{translation:Translate TreeMes}" Icon="tree.png" BackgroundColor="WhiteSmoke"
+<ContentPage Title="{translation:Translate TreeMes}" Icon="tree.png" BackgroundColor="WhiteSmoke" xamarinforms:BottomBarPageExtensions.TabColor="#20b2aa"
     xmlns="http://xamarin.com/schemas/2014/forms"
+             xmlns:xamarinforms="clr-namespace:BottomBar.XamarinForms;assembly=BottomBar.XamarinForms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:forms="clr-namespace:Lottie.Forms;assembly=Lottie.Forms"
              xmlns:translation="clr-namespace:GenTree.Helpers"
