--- a/GenTree/GenTree/Views/Relatives.xaml
+++ b/GenTree/GenTree/Views/Relatives.xaml
@@ -13,20 +13,21 @@
 
     <StackLayout>
         <SearchBar x:Name="MainSearchBar"
-                   Text="{Binding MySearchText}"
-                   SearchCommand="{Binding ListViewModel.SearchPersons}"
-                   SearchCommandParameter="{Binding}"/>
+                   />
 
-        <Button Text="{translation:Translate AddMes}" Command="{Binding CreatePersonCommand}" />
-        <ListView x:Name="personsList" ItemsSource="{Binding Persons}"
+        <Button Text="{translation:Translate AddMes}" Command="{Binding CreatePersonsCommand}"/>
+        <Button Text="{translation:Translate DeleteMes}" Command="{Binding DeletePersonCommand}"/>
+            <ListView x:Name="personsList" ItemsSource="{Binding Persons}"
               SelectedItem="{Binding SelectedPerson, Mode=TwoWay}" HasUnevenRows="True">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
                         <ViewCell.View>
                             <StackLayout>
-                                <Label Text="{Binding Name}" FontSize="Medium" />
-                                <Label Text="{Binding Surname}" FontSize="Small" />
+                                <Label Text="{Binding Name}"  FontSize="Medium" />
+                                <Label Text="{Binding Surname}" FontSize="Medium" />
+                                <Label Text="{Binding Gender}" FontSize="Small" />
+                                <Label Text="{Binding Id}" FontSize="Small" />
                             </StackLayout>
                         </ViewCell.View>
                     </ViewCell>
