--- a/GenTree/GenTree/Views/MainPage.xaml
+++ b/GenTree/GenTree/Views/MainPage.xaml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<xamarinforms:BottomBarPage Title="GenTree" BarBackgroundColor="LightSeaGreen" BackgroundImage="logo.jpg" BackgroundColor="LightSeaGreen"
+<xamarinforms:BottomBarPage Title="GenTree" BarBackgroundColor="LightSeaGreen" BackgroundImage="logo.jpg" BackgroundColor="LightSeaGreen" Icon="green_earth.png"
     xmlns:xamarinforms="clr-namespace:BottomBar.XamarinForms;assembly=BottomBar.XamarinForms"
     xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
@@ -11,7 +11,8 @@
         <local1:Tree />
         <local1:Relatives />
         <local1:Settings />
-        <local1:Tree/>
+        <local1:wb />
+        <local1:Info/>
     </TabbedPage.Children>
 
 </xamarinforms:BottomBarPage>
